[package]
name = "discord-ip-miner"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
axum = "0.8.4"
axum-client-ip = "1.0.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
h2 = { version = "0.4.10", features = ["stream"] }
hex = { version = "0.4.3", features = ["serde"] }
hickory-resolver = "0.25.2"
hmac = "0.12.1"
http = "1.3.1"
humantime = "2.2.0"
moka = { version = "0.12.10", features = ["sync"] }
papaya = "0.2.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
webpki-roots = "1.0.0"
